# Qlam

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: MirrorList.txt  application.cpp  application.h  application.qrc  databaseinfo.cpp  databaseinfo.h  elidinglabel.cpp  elidinglabel.h  iconbarwidget.cpp  iconbarwidget.h  infectedfile.cpp  infectedfile.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  qlam.h  scanner.cpp  scanner.h  scannerheuristicmatch.h  scanprofile.cpp  scanprofile.h  scanprofilechooser.cpp  scanprofilechooser.h  scanprofilechooser.ui  scanreport.cpp  scanreport.h  scanwidget.cpp  scanwidget.h  scanwidget.ui  settings.cpp  settings.h  settingsdialogue.cpp  settingsdialogue.h  settingsdialogue.qrc  settingsdialogue.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  (+12 more)
src/resources/: application.qrc  iconbar.qrc  mainwindow.qrc  settingsdialogue.qrc
src/ui/: mainwindow.ui  scanprofilechooser.ui  scanwidget.ui  settingsdialogue.ui  settingswidget.ui  timedactiondialogue.ui  updatewidget.ui
